frontend/src/app/app.scss
@import "resources/index";

main,
.app-container,
router-view
{
    // Use horizontal flex layout.
    display: flex;

    // Fill the available space.
    flex-grow: 1;

    // Allow the element to shrink.
    min-width: 0;

    // Fill the available height.
    height: 100%;
}

// --- LEGACY SUPPORT -----------------------------------------------------------------------------

react-module
{
    // Ensure react modules fill the content area of the viewport.
    // We must use absoliute positioning to do this, due to the legacy styles.
    position: absolute;
    height: 100vh;

    width: calc(100vw - var(--size-app-sidebar-width-expanded));
    left: var(--size-app-sidebar-width-expanded);

    .sideMenu--collapsed &
    {
        width: calc(100vw - var(--size-app-sidebar-width));
        left: 0;
    }

    // Use vertical flex layout.
    display: flex;
    flex-direction: column;

    // Ensure react modules never overlap any app elements.
    z-index: 0;

    // Import legacy styles.
    @import "../legacy/packages/shared/src/webKit/LEGACY";

    .c-login-outerContainer,
    .c-activation-outerContainer
    {
        position: fixed;
        left: 0;
        right: 0;
    }

    // Change page header to better match the new pages.
    .pageHeader
    {
        padding: 9rem 9rem 0 9rem;
        border-bottom: var(--border-width-thin) solid var(--color-surface-border);

        --colorNeutralDark: var(--color-surface-neutral-surface);
        --colorInteractivePrimary: var(--color-surface-primary-text);

        .pageHeader-top
        {
            height: auto;

            .pageHeader-path,
            .pageHeader-path-segment
            {
                line-height: var(--font-largest-line-height);
                font-size: var(--font-largest-font-size);
                font-weight: var(--font-largest-font-weight);
                --font-current-margin-top: var(--font-largest-margin-top);
                --font-current-margin-bottom: var(--font-largest-margin-bottom);

                .icon
                {
                    margin-top: 1px;
                    font-size: 23px;
                }
            }
        }

        .pageHeader-tabs
        {
            border: var(--border-width-medium) solid var(--color-surface-neutral-border);
            border-radius: var(--border-radius-medium);

            .pageHeader-tabs-tab
            {
                line-height: calc(10rem - 2 * var(--border-width-medium));

                &.active
                {
                    color: inherit;
                }
            }
        }
    }
}

// --- TEMPORARY STYLES ---------------------------------------------------------------------------

:root
{
    // Default padding for cards.
    // TODO: Should we define variables for standard margin and padding instead?
    --card-padding: 3.5rem 3rem;
}

.button-row
{
    display: flex;

    > button:not(:last-child)
    {
        margin-right: var(--size-inline-spacing)
    }
}

toolbar
{
    // Use a small default width for search inputs, and expand them when focused.
    search-input
    {
        --input-min-width: 0;
        width: 10vw;
        transition: width var(--animation-duration-long);

        // Delay transition so it's possible to click the clear icon within the input.
        transition-delay: 0.1s;

        &:focus-within,
        &:not(.--empty)
        {
            width: 80rem;
        }
    }

    // Use a small default width for search inputs, and expand them when focused.
    input[type="text"],
    input[type="search"]
    {
        width: 10vw;
        min-width: 30rem;
        max-width: 80rem;
        transition: width var(--animation-duration-long);

        // Delay transition so it's possible to click the clear icon within the input.
        transition-delay: 0.1s;

        &:focus,
        &:not(:placeholder-shown)
        {
            width: 80rem;
        }
    }

    select
    {
        width: auto;
        min-width: 30rem;
    }
}

data-table-cell icon + span
{
    margin-left: var(--size-inline-spacing);
}

@media ($media-smallest-max)
{
    app-sidebar.--expanded
    {
        width: 100vw !important;
    }
}

